Commentary to help with PCA

--- a/kyle/kyle_msvd.ipynb
+++ b/kyle/kyle_msvd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "1.921649874320172"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,17 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 2., 3.],\n",
-       "       [1., 2., 3.]])"
+       "array([[1., 2., 3.]])"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,6 +139,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Ryan's Comments</h1>\n",
+    "<p>\n",
+    "    Hey Kyle! Here's me presenting an idea as to how you could approach the covariance matrix. Let $X_c$ be the set of points within some radius $\\epsilon$ of center point $c$. We assume that $X_c$ consists of $N$ points in $d$ dimensions, and we represent it as a $N\\times d$ matrix.\n",
+    "    <br/><br/>\n",
+    "    In the block below, I generate $X_c$ as a random $N\\times d$ matrix, just so that the cell below runs.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500, 20)\n",
+      "[-0.02763406 -0.03523797  0.01091091  0.02743391  0.05306933 -0.04435852\n",
+      " -0.0190819   0.02641563  0.04160879 -0.0869273   0.0598225  -0.0144549\n",
+      "  0.01147376  0.0520233  -0.0521974   0.01076213  0.07494473 -0.05430685\n",
+      "  0.00947868 -0.02640565]\n",
+      "(500, 20)\n",
+      "(20, 20)\n",
+      "[0.61987605 0.7127197  0.73361923 0.76811644 0.80635459 0.81289635\n",
+      " 0.84781395 0.87373054 0.93386579 0.95929094 0.98435485 1.0375708\n",
+      " 1.06086397 1.1221724  1.16084316 1.17381874 1.21177891 1.26589367\n",
+      " 1.2784113  1.33270012]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize N, d, X_c\n",
+    "N = 500\n",
+    "d = 20\n",
+    "X_c = np.random.randn(N, d)\n",
+    "print(X_c.shape)\n",
+    "\n",
+    "# Center points at their mean\n",
+    "# axis = 0 makes sure that the mean of each column is taken from all rows\n",
+    "mean = np.mean(X_c, axis=0)\n",
+    "X_cc = X_c - mean\n",
+    "\n",
+    "# For now, we assume that our data need not be normalized\n",
+    "# For 2-dimensional NumPy arrays, \"@\" defaults to the standard matrix product \n",
+    "covariance = 1/N * (X_cc.T @ X_cc)\n",
+    "\n",
+    "# Get eigenvalues and eigenvectors through np.linalg.eigh\n",
+    "eigvals, eigvecs = np.linalg.eigh(covariance)\n",
+    "\n",
+    "# Eigenvalues should be sorted in increasing order\n",
+    "print(eigvals)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -163,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
