Almost done, but with an error

--- a/kyle/kyle_msvd.ipynb
+++ b/kyle/kyle_msvd.ipynb
@@ -1,13 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Kyle's Scratch Code (before function):\n",
+    "\n",
+    "I feel like I should be getting a correct plot with the additions to the code. However, I am running into an error with the np.linalg.eigh() function. When that cell is run, it says that I am supplying a 0-dimensional array, rather than a 2-dimensional array."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import random\n",
+    "import matplotlib.pyplot as plt\n",
     "from scipy.spatial import distance\n",
     "\n",
     "n_dimensions=3\n",
@@ -23,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,11 +58,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LinAlgError",
+     "evalue": "0-dimensional array given. Array must be at least two-dimensional",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-b8b38c8c2825>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mX_centered\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmean_X\u001b[0m \u001b[0;31m#centers the set X by subtracting the mean from each point\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mcov_X\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdim_X\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mX_centered\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mX_centered\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#calculates the covariance of the new centered set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0meigvals\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0meigvecs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meigh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcov_X\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#computes the eigenvalues and eigenvectors of the covariance matrix and stores them in the respective variables\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0meigval_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meigvals\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#appends the set of eigenvalues to the list created above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36meigh\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36meigh\u001b[0;34m(a, UPLO)\u001b[0m\n\u001b[1;32m   1457\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1458\u001b[0m     \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwrap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_makearray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1459\u001b[0;31m     \u001b[0m_assert_stacked_2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1460\u001b[0m     \u001b[0m_assert_stacked_square\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1461\u001b[0m     \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult_t\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_commonType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36m_assert_stacked_2d\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    195\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0marrays\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    196\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 197\u001b[0;31m             raise LinAlgError('%d-dimensional array given. Array must be '\n\u001b[0m\u001b[1;32m    198\u001b[0m                     'at least two-dimensional' % a.ndim)\n\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mLinAlgError\u001b[0m: 0-dimensional array given. Array must be at least two-dimensional"
+     ]
+    }
+   ],
    "source": [
     "radii = np.arange(.1,1.01,.01) #creates an array of radii values to iterate through\n",
+    "eigval_list = [] #creates empty list to store eigen values\n",
     "\n",
     "#Find the points on the hypersphere within each radii\n",
     "for i in radii: #iteratest through each radii value\n",
@@ -64,7 +90,23 @@
     "            else:\n",
     "                X=np.vstack((X,hsphere[:,j])) #vertically stacks subsequent points to the empty array\n",
     "    dim_X=np.shape(X) #saves dimensions of matrix for points within the current radius\n",
-    "    #Need to set up covariance matrix within this and perform PCA"
+    "    \n",
+    "    #Create the covariance matrix and save eigenvalues for each set X\n",
+    "    mean_X=np.mean(X,axis=0) #calculates the mean of X\n",
+    "    X_centered= X - mean_X #centers the set X by subtracting the mean from each point\n",
+    "    cov_X= 1/dim_X[0] * (X_centered.T @ X_centered) #calculates the covariance of the new centered set\n",
+    "    eigvals,eigvecs=np.linalg.eigh(cov_X) #computes the eigenvalues and eigenvectors of the covariance matrix and stores them in the respective variables\n",
+    "    eigval_list.append(eigvals) #appends the set of eigenvalues to the list created above\n",
+    "    \n",
+    "#Plot the eigenvalues\n",
+    "eig_mat=np.stack(eigval_list, axis=0) #stacks eigenvalue list into an array (dimensions of N x D)\n",
+    "dim_eig_mat=np.shape(eig_mat)\n",
+    "fig=plt.figure() #creates a figure plot\n",
+    "axes=fig.add_subplot(111) #adds x and y axes to the plot\n",
+    "for i in range(dim_eig_mat):\n",
+    "    axes.plot(radii, eig_mat[:,i]) #plots eigenvalues (y-axis) against each radii value (x-axis) \n",
+    "    \n",
+    "plt.show()"
    ]
   },
   {
@@ -120,22 +162,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0, 3)"
+       "22"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.shape(x)"
+    "dim_X[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The Cleaned Up Code (function):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#empty rn"
    ]
   },
   {
@@ -284,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
