provided working example with np.stack

--- a/kyle/kyle_msvd.ipynb
+++ b/kyle/kyle_msvd.ipynb
@@ -319,11 +319,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Creating an NumPy array from arbitrarily many points</h2>\n",
+    "<p>\n",
+    "    For a given radius $r$, there are going to be $N_r$-many points within distance $r$ from your center point. So, even though you know that each point has dimension $d$, you need to be able to make a $N_r\\times d$ array for your data. You know $d$ ahead of time; you do NOT know $N_r$ ahead of time.<br/><br/>\n",
+    "    The way you are handling the insertion of new points makes sense on a high level; it makes sense that you start with some NumPy array that remembers the dimension of your points, but starts with zero rows, and that you append new points to the array as new rows. This makes sense conceptually, but it is very much antithetical to the way NumPy arrays work under the hood. I think the best way to go about this is to just collect your points into a list, and to call the function np.stack. I use it in the example below.\n",
+    "</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# empty list\n",
+    "list_of_points = []\n",
+    "# generate N points of dimension d\n",
+    "N = 1000\n",
+    "d = 10\n",
+    "for j in range(N):\n",
+    "    point = "
+   ]
   }
  ],
  "metadata": {
@@ -342,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
