--- a/kyle/kyle_msvd.ipynb
+++ b/kyle/kyle_msvd.ipynb
@@ -100,7 +100,13 @@
     "\n",
     "def eigen_calc(N,D):\n",
     "    \"\"\"\n",
+    "    Version 1.0\n",
+    "    7/14/20\n",
+    "    Ryan Robinett\n",
+    "    Kyle Ruark\n",
+    "    \n",
     "    This function creates a hypersphere in D dimensions, by sampling N points from a Gaussian distribution. A random point is then selected as the center of an ball, iterating through specidic radii values and performing PCA at the given radius. These PCA values (eigenvalues) are then saved in a multidimensional list which can be used to plot in the function eigen_plot.\n",
+    "    Also, this function requires the numpy, random, and scipy packages for proper use.\n",
     "    \n",
     "    Parameters:\n",
     "        N (int): the number of points to be sampled on the hypersphere\n",
@@ -108,7 +114,6 @@
     "    \"\"\"\n",
     "    import numpy as np\n",
     "    import random\n",
-    "    import matplotlib.pyplot as plt\n",
     "    from scipy.spatial import distance\n",
     "\n",
     "    npoints=N\n",
@@ -131,12 +136,12 @@
     "    eigval_list = [] #creates empty list to store eigen values\n",
     "    \n",
     "    #Find the points on the hypersphere within each radii\n",
-    "    for i in radii: #iteratest through each radii value\n",
+    "    for i in radii: #iterates through each radii value\n",
     "        X=[] #creates an empty array to be filled in with the values on the hypersphere that fall within the ball radii\n",
     "        for j in np.arange(0,n_points): #iterates through array of index values for each point\n",
     "            if distance.euclidean(hsphere[:,j],center_ball)<=i: #selects points whose distance to center is shorter than the length of the radius\n",
-    "                X.append(hsphere[:,j])\n",
-    "        X_mat=np.vstack(X)\n",
+    "                X.append(hsphere[:,j]) #appends selected points to the array X\n",
+    "        X_mat=np.vstack(X) #creates a 'matrix' by vertically stacking the elements of the list\n",
     "        dim_X=np.shape(X_mat) #saves dimensions of matrix for points within the current radius\n",
     "        \n",
     "        #Create the covariance matrix and save eigenvalues for each set X\n",
@@ -154,17 +159,29 @@
     "\n",
     "def eigen_plot(eigval_list):\n",
     "    \"\"\"\n",
-    "    This function plots the mutlidimensional eigenvalue list created from the eigen_calc function. X-axis corresponds to the radii value, while the y-axis corresponds to the eigenvalues. Each individual line represents a dimension.\n",
+    "    Version 1.0\n",
+    "    7/14/20\n",
+    "    Ryan Robinett\n",
+    "    Kyle Ruark\n",
+    "    \n",
+    "    This function plots the multidimensional eigenvalue list created from the eigen_calc function. X-axis corresponds to the radii value, while the y-axis corresponds to the eigenvalues. Each individual line represents a dimension.\n",
+    "    Also, this function requires both the matplotlib and numpy packages.\n",
+    "    Run the code: %matplotlib inline, when in jupyter notebook to display the plot in the notebook.\n",
     "    \n",
     "    Parameters:\n",
     "        eigval_list (list): This is a multidimensional list containing eigenvalues at different radii values \n",
     "    \"\"\"\n",
+    "    #Import necessary packages\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import numpy as np\n",
+    "    \n",
     "    #Plot the eigenvalues\n",
+    "    radii = np.arange(.1,1.01,.01) #creates an array of radii values to iterate through\n",
     "    eig_mat=np.stack(eigval_list, axis=0) #stacks eigenvalue list into an array (dimensions of N x D)\n",
-    "    dim_eig_mat=np.shape(eig_mat)\n",
+    "    dim_eig_mat=np.shape(eig_mat) #saves dimensions of the eienvalue matrix for easy access\n",
     "    fig=plt.figure() #creates a figure plot\n",
     "    axes=fig.add_subplot(111) #adds x and y axes to the plot\n",
-    "    for i in range(dim_eig_mat[1]):\n",
+    "    for i in range(dim_eig_mat[1]): #iterates through the columns (dimensions) of the eigenvalue matrix \n",
     "        axes.plot(radii, eig_mat[:,i]) #plots eigenvalues (y-axis) against each radii value (x-axis) \n",
     "        \n",
     "    return(plt.show())"
