--- a/kyle/kyle_msvd.ipynb
+++ b/kyle/kyle_msvd.ipynb
@@ -105,57 +105,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hypersphere(npoints, ndim):\n",
     "    \"\"\"\n",
-    "    Create samples on a unit sphere in desired dimensions\n",
+    "    This function creates samples on a unit sphere in desired dimensions.\n",
+    "    It requires the numpy package.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        npoints (int): the number of points to be sampled\n",
+    "        ndim (int): the number of dimensions in which the unit sphere will be sampled\n",
     "    \"\"\"\n",
+    "    #Import necessary packages\n",
+    "    import numpy as np\n",
+    "    \n",
     "    vec=np.random.randn(ndim,npoints) #creates a random sample from a Gaussian distribution in the form of an array of dimensions: ndim x npoints\n",
     "    vec/=np.linalg.norm(vec,axis=0) #divides each vector by its norm, which turns each vector into a unit vector (length 1). Here we obtain samples from the unit sphere in the dimension we stated in the beginning of the function.\n",
     "    return(vec)\n",
     "\n",
     "### Function for obtaining eigenvalues while iterating through radii\n",
     "\n",
-    "def eigen_calc(N,D):\n",
+    "def eigen_calc(cloud,center,radstart,radend,radint):\n",
     "    \"\"\"\n",
     "    Version 1.0\n",
     "    7/14/20\n",
     "    Ryan Robinett\n",
     "    Kyle Ruark\n",
     "    \n",
-    "    This function creates a hypersphere in D dimensions, by sampling N points from a Gaussian distribution. A random point is then selected as the center of an ball, iterating through specidic radii values and performing PCA at the given radius. These PCA values (eigenvalues) are then saved in a multidimensional list which can be used to plot in the function eigen_plot.\n",
+    "    This function iterates through specidic radii values and performs PCA at the given radius. These PCA values (eigenvalues) are then saved in a multidimensional list which can be used to plot in the function eigen_plot.\n",
     "    Also, this function requires the numpy, random, and scipy packages for proper use.\n",
     "    \n",
     "    Parameters:\n",
-    "        N (int): the number of points to be sampled on the hypersphere\n",
-    "        D (int): the dimensions of the hypersphere to be sampled\n",
+    "        cloud (arr): a multidimensional point cloud array that contains the coordinates of the points in the cloud\n",
+    "        center (arr): the desired point on which the sphere is centered\n",
+    "        radstart (int): the first radius value of the expanding sphere \n",
+    "        radend (int): the final value (included) of the expanding spherical radius\n",
+    "        radint (int): the interval (step size) at which the radius expands\n",
     "    \"\"\"\n",
+    "    #Import necessary packages\n",
     "    import numpy as np\n",
     "    import random\n",
     "    from scipy.spatial import distance\n",
-    "\n",
-    "    npoints=N\n",
-    "    ndim=D\n",
     "    \n",
-    "    #Randomly select a point on the hypersphere to be the center of the ball\n",
-    "    hsphere=hypersphere(npoints,ndim)\n",
-    "    dim_array=np.shape(hsphere) #defines the shape of the array\n",
-    "    rng=random.randint(0,dim_array[1])#pulls random number from 0 to n_points and assign to rng\n",
-    "    center_ball=hsphere[:,rng] #uses randomly generated number to extract one row of points\n",
-    "    \n",
-    "    \n",
-    "    radii = np.arange(.1,1.01,.01) #creates an array of radii values to iterate through\n",
-    "    eigval_list = [] #creates empty list to store eigen values\n",
+    "    dim_array=np.shape(cloud) #saves the dimensions of the array\n",
+    "    radii=np.arange(radstart,radend+radint,radint) #creates a list of the specified radii values\n",
+    "    eigval_list = [] #creates empty list to store eigenvalues\n",
     "    \n",
     "    #Find the points on the hypersphere within each radii\n",
     "    for i in radii: #iterates through each radii value\n",
     "        X=[] #creates an empty array to be filled in with the values on the hypersphere that fall within the ball radii\n",
-    "        for j in np.arange(0,n_points): #iterates through array of index values for each point\n",
-    "            if distance.euclidean(hsphere[:,j],center_ball)<=i: #selects points whose distance to center is shorter than the length of the radius\n",
-    "                X.append(hsphere[:,j]) #appends selected points to the array X\n",
+    "        for j in np.arange(0,dim_array[0]): #iterates through array of index values for each point\n",
+    "            if distance.euclidean(cloud[:,j],center)<=i: #selects points whose distance to center is shorter than the length of the radius\n",
+    "                X.append(cloud[:,j]) #appends selected points to the array X\n",
     "        X_mat=np.vstack(X) #creates a 'matrix' by vertically stacking the elements of the list\n",
     "        dim_X=np.shape(X_mat) #saves dimensions of matrix for points within the current radius\n",
     "        \n",
@@ -272,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
