--- a/tests/MLS_Plotting.ipynb
+++ b/tests/MLS_Plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +224,50 @@
     "\t\tprod_1 = np.matmul(np.matmul(np.matmul(F,D), P), inv)\n",
     "\t\tp_star = np.matmul(prod_1,R)\n",
     "\t\treturn p_star[0,0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.92 0.   0.   0.  ]\n",
+      " [0.   1.   0.   0.  ]\n",
+      " [0.   0.   0.92 0.  ]\n",
+      " [0.   0.   0.   0.68]]\n",
+      "[[ 1.  1.  1.  1.]\n",
+      " [-1.  0.  1.  2.]\n",
+      " [ 1.  0.  1.  4.]]\n",
+      "[[0.92 0.   0.   0.  ]\n",
+      " [0.   1.   0.   0.  ]\n",
+      " [0.   0.   0.92 0.  ]\n",
+      " [0.   0.   0.   0.68]]\n",
+      "[[ 0.92  1.    0.92  0.68]\n",
+      " [-0.92  0.    0.92  1.36]\n",
+      " [ 0.92  0.    0.92  2.72]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-5.000000000000002"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([-2,-1,0,1,2])\n",
+    "b = np.array([0,3,4,3,0])\n",
+    "points = np.array([a,b])\n",
+    "MLS = C_1_MLS_oracle(points, 5, 2)\n",
+    "MLS.eval(3)"
    ]
   },
   {
