Trail Points and Bugged Sparse Implementation
1. In ILC2_ILC3 transition analysis
in first part we subset the cells and pick a trail along the developmental trajectory
in second part we compute hyperplanes around the center points. (more sampling is needed)

2. The exploratory analysis of the hyperplanes can be done in HyperlanesAnalysis.

3. Modify eigen_calc_from_dist_mat_withNumPoints in mSVD to allow Rstart and Rend

4. Added a bugged version of Sparse_eigen_calc_from_dist_mat in mSVD

--- a/patches_mSVD.ipynb
+++ b/patches_mSVD.ipynb
@@ -103,8 +103,7 @@
     "#intrinsic dimensionality\n",
     "k = 2\n",
     "#save ensembles of hyperplanes\n",
-    "SaveLocalPCAs(Patches, cids, k, dist_mat)\n",
-    "\n"
+    "SaveLocalPCAs(Patches, cids, k, dist_mat)"
    ]
   },
   {
@@ -386,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
