pickle ripser output

--- a/circle_tracer.ipynb
+++ b/circle_tracer.ipynb
@@ -11,7 +11,8 @@
     "import scanpy as sc\n",
     "from ripser import Rips\n",
     "from ripser import ripser\n",
-    "from time import time"
+    "from time import time\n",
+    "import pickle"
    ]
   },
   {
@@ -144,15 +145,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(type(diagrams))"
+    "pickle.dump(diagrams, \"ripser_output.pkl\")"
    ]
   }
  ],
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "-all",
-   "formats": "py:light,ipynb",
-   "main_language": "python"
+   "formats": "py:light,ipynb"
   },
   "kernelspec": {
    "display_name": "Python 3",
