Fixeed arguments according to pickle syntax

--- a/circle_tracer.ipynb
+++ b/circle_tracer.ipynb
@@ -145,7 +145,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(diagrams, \"ripser_output.pkl\")"
+    "with open(\"ripser_output.pkl\", \"wb\") as file:\n",
+    "\tpickle.dump(diagrams, file)"
    ]
   }
  ],
