adding cocycles to ripser output

--- a/circle_tracer.ipynb
+++ b/circle_tracer.ipynb
@@ -135,7 +135,7 @@
     "# Do ripster shenanigans\n",
     "start = time()\n",
     "rips = Rips()\n",
-    "diagrams = rips.fit_transform(np_data, distance_matrix=False, metric=\"euclidean\")\n",
+    "diagrams = rips.fit_transform(np_data, distance_matrix=False, metric=\"euclidean\", do_cocycles=True)\n",
     "print(\"Time elapsed: \"+str(time() - start))"
    ]
   },
